--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,7 +1,6 @@
 version: 2
 updates:
-  - package-ecosystem: "bundler"
+  - package-ecosystem: "nuget"
     directory: '/'
-    open-pull-requests-limit: 10
     schedule:
       interval: "daily"
